--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 *{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -19,5 +20,25 @@ button{
   border-radius: 5px;
   border: none;
   margin: 5px;
+}
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
+  grid-gap: 50px;
+  align-items: center;
+  margin: 10px;
+}
+.grid h4{
+  font-size: 12px;
+}
+.grid li{
+  border: 1px solid rgb(0, 225, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 200px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px 3px dodgerblue;
 }
 
